--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "WONGYU LEE"
 title_separator          : "-"
 name                     : &name "WONGYU LEE"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://wklee0607.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "WKlee0607/WKlee0607.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "WONGYU LEE"
   pronouns         : # example: "she/her"  
-  bio              : "M.S. candidate at Kyung Hee University"
+  bio              : "M.S. candidate at Kyung Hee University."
   location         : # "1732 Deogyeong-daero, Giheung-gu, Yongin-si, Gyeonggi-do, Republic of Korea"
   employer         : "KyungHee University"
   uri              : # URL
