--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "WONGYU LEE"
 title_separator          : "-"
 name                     : &name "WONGYU LEE"
 description              : &description "personal description"
-url                      : https://wklee0607.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://wklee0607.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "WKlee0607/WKlee0607.github.io"
 
