--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /projects/
     
   - title: "CV"
-    url: /cv/
+    url: https://wklee0607.github.io/files/CV__Lee_Won_Gyu.pdf
     
   # - title: "CV"
   #   url: /cv-json/
